[package]
name = "futures-x-io"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2018"
description = "Compatible with futures io and tokio io."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/futures-x-io"
homepage = "https://github.com/bk-rs/futures-x-io"
documentation = "https://docs.rs/futures-x-io"
keywords = []
categories = ["asynchronous"]
readme = "README.md"

[features]
futures_io = ["futures-io"]
tokio02_io = ["tokio02"]
tokio_io = ["tokio"]

futures_util_io = ["futures_io", "futures-util"]
futures_lite_io = ["futures_io", "futures-lite"]
tokio02_io_util = ["tokio02_io", "tokio02/io-util"]
tokio_io_util = ["tokio_io", "tokio/io-util"]

[dependencies]
futures-io = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["io"], optional = true }

futures-lite = { version = "1.11", default-features = false, features = ["std"], optional = true }

tokio02 = { version = "~0.2", default-features = false, features = [], optional = true, package = "tokio" }
tokio = { version = "1.0", default-features = false, features = [], optional = true }

[dev-dependencies]
futures-executor = { version = "0.3", default-features = false, features = ["default"] }

[package.metadata.cargo-all-features]
skip_feature_sets = [
    ["futures_io", "tokio02_io"],
    ["futures_io", "tokio_io"],
    ["futures_io", "tokio02_io_util"],
    ["futures_io", "tokio_io_util"],

    ["tokio02_io", "tokio_io"],
    ["tokio02_io", "futures_util_io"],
    ["tokio02_io", "futures_lite_io"],
    ["tokio02_io", "tokio_io_util"],

    ["tokio_io", "futures_util_io"],
    ["tokio_io", "futures_lite_io"],
    ["tokio_io", "tokio02_io_util"],

    ["futures_util_io", "futures_lite_io"],
    ["futures_util_io", "tokio02_io_util"],
    ["futures_util_io", "tokio_io_util"],

    ["futures_lite_io", "tokio02_io_util"],
    ["futures_lite_io", "tokio_io_util"],

    ["tokio02_io_util", "tokio_io_util"],
]
skip_optional_dependencies = true
